<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="account">Account: </string>
    <string name="app_name">TeamJavatar</string>
    <string name="action_settings">Settings</string>
    <string name="amount_field">Amount</string>
    <string name="back">Back</string>
    <string name="balance_field">Balance</string>
    <string name="bottom_welcome">Financial Management Service</string>
    <string name="cancel">Cancel</string>
    <string name="change_date">Change Date</string>
    <string name="choose_report_type">Choose Report Type</string>
    <string name="create_new_account">Create New Account</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="deposit_button">Deposit</string>
    <string name="display_name">Display Name</string>
    <string name="effective_date_choose">Choose Effective Date</string>
    <string name="effective_date_field">Effective Date</string>
    <string name="expense_category_field">Expense Category</string>
    <string name="firstname">First Name</string>
    <string name="from">From\nFrom</string>
    <string name="go_to_report_screen">Go To Report Screen</string>
    <string name="hello_world">Hello world!</string>
    <string name="interest_rate">Interest Rate</string>
    <string name="lastname">Last Name</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="manage_account">Manage Account</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="password_field">********</string>
    <string name="percentage_sign">%</string>
    <string name="register">Register</string>
    <string name="report">Report: </string>
    <string name="source_field">Source</string>
    <string name="select_an_item_below">Select an item below to manage</string>
    <string name="spending_category_report">Spending Category Report</string>
    <string name="success">Success</string>
    <string name="title_activity_account_history">Account History</string>
    <string name="title_activity_add_account">AddAccountActivity</string>
    <string name="title_activity_deposit">Deposit Form</string>
    <string name="title_activity_login_controls">Login</string>
    <string name="title_activity_register_controls">Register</string>
    <string name="title_activity_report_display">Reports</string>
    <string name="title_activity_select_spending_category_date">Choose Date Range</string>
    <string name="title_activity_spending_category_report">Spending Category Report Activity</string>
    <string name="title_activity_transaction_index">TransactionIndex</string>
    <string name="title_activity_transaction_management">TransactionManagementActivity</string>
    <string name="title_activity_user_index">Home</string>
    <string name="title_activity_withdrawal">Withdrawal Form</string>
    <string name="to">To\nTo</string>
    <string name="top_welcome">Team Javatar\'s</string>
    <string name="transaction_name_field">Transaction Name</string>
    <string name="user_id">User ID</string>
    <string name="view_report">View Report</string>
    <string name="withdraw">Withdraw</string>
    <string name="withdrawal_button">Withdrawal</string>

</resources>
