<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".RegisterControlsActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/user_first_name_field"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="44dp"
        android:minWidth="400dp"
        android:text="Register"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="50sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/user_first_name_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/user_last_name_field"
        android:layout_alignLeft="@+id/textView1"
        android:layout_marginBottom="15dp"
        android:ems="10"
        android:hint="@string/firstname"
        android:inputType="textPersonName"
        android:minWidth="400dp" />

    <EditText
        android:id="@+id/user_last_name_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/user_id_field"
        android:layout_alignLeft="@+id/user_first_name_field"
        android:layout_marginBottom="17dp"
        android:ems="10"
        android:hint="@string/lastname"
        android:inputType="textPersonName"
        android:minWidth="400dp" />

    <EditText
        android:id="@+id/confirm_password_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/password_field"
        android:layout_alignParentTop="true"
        android:layout_marginTop="292dp"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:minWidth="400dp" />

    <EditText
        android:id="@+id/password_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/user_id_field"
        android:layout_below="@+id/confirm_password_field"
        android:layout_marginTop="29dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:minWidth="400dp" />

    <EditText
        android:id="@+id/user_id_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/confirm_password_field"
        android:layout_alignLeft="@+id/user_last_name_field"
        android:layout_marginBottom="58dp"
        android:ems="10"
        android:hint="@string/user_id"
        android:minWidth="400dp" />

    <Button
        android:id="@+id/register_user_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/password_field"
        android:layout_below="@+id/password_field"
        android:layout_marginTop="32dp"
        android:minWidth="400dp"
        android:onClick="register"
        android:text="@string/register" />

</RelativeLayout>