<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background"
    android:orientation="vertical"
    tools:context=".application.AddAccountActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/interest_field"
        android:layout_alignBottom="@+id/interest_field"
        android:layout_toRightOf="@+id/interest_field"
        android:text="@string/percentage_sign"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/display_name_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name_field"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="21dp"
        android:ems="10"
        android:hint="@string/display_name"
        android:minWidth="400dp" />

    <Button
        android:id="@+id/create_new_account_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/display_name_field"
        android:layout_below="@+id/interest_field"
        android:layout_marginTop="44dp"
        android:minWidth="400dp"
        android:onClick="addNewAccount"
        android:text="@string/create_new_account" />

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/name_field"
        android:layout_alignParentTop="true"
        android:layout_marginTop="46dp"
        android:minWidth="400dp"
        android:text="Add Account"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="50sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/interest_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/display_name_field"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="@string/interest_rate"
        android:inputType="numberDecimal"
        android:minWidth="400dp" />

    <EditText
        android:id="@+id/name_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/display_name_field"
        android:layout_below="@+id/TextView01"
        android:layout_marginTop="54dp"
        android:ems="10"
        android:hint="@string/name"
        android:minWidth="400dp" />

</RelativeLayout>