<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:scaleType="centerCrop"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/welcome_text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="46dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/top_welcome"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="75sp"
        android:textStyle="bold"
        android:typeface="normal" />

    <TextView
        android:id="@+id/welcome_text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/welcome_text1"
        android:layout_centerHorizontal="true"
        android:text="@string/bottom_welcome"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="italic" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/welcome_text2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:minWidth="120dp"
        android:onClick="login"
        android:text="@string/login"
        android:textStyle="bold"
        android:width="400dp" />

    <Button
        android:id="@+id/register_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/login_button"
        android:layout_below="@+id/login_button"
        android:layout_marginTop="26dp"
        android:minWidth="400dp"
        android:onClick="register"
        android:text="@string/register"
        android:textStyle="bold" />

</RelativeLayout>