<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AccountHistoryActivity" >

    <ListView
    	android:id="@+id/listview"
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:layout_alignParentBottom="true"
    	android:layout_alignParentRight="true"
    	android:layout_below="@+id/textView1" >

    </ListView>

    <Button
        android:id="@+id/depositButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:onClick="gotoDeposit"
        android:text="@string/deposit_button" />

    <Button
        android:id="@+id/Button01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/depositButton"
        android:layout_alignBottom="@+id/depositButton"
        android:layout_toRightOf="@+id/depositButton"
        android:onClick="gotoWithdrawal"
        android:text="@string/withdrawal_button" />

    <TextView
    	android:id="@+id/textView1"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:layout_alignLeft="@+id/listview"
    	android:layout_below="@+id/depositButton"
    	android:text="@string/select_an_item_below"
    	android:textSize="20sp" />

</RelativeLayout>