<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginControlsActivity" >

    <EditText
        android:id="@+id/user_id_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/password_field"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="64dp"
        android:ems="10"
        android:hint="@string/user_id"
        android:minWidth="400sp" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/password_field"
        style="@style/AppBaseTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/user_id_field"
        android:layout_alignParentTop="true"
        android:layout_marginTop="229dp"
        android:ems="10"
        android:hint="@string/password_field"
        android:inputType="textPassword"
        android:minWidth="400dp" />

    <Button
        android:id="@+id/login_user_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/password_field"
        android:layout_below="@+id/user_id_field"
        android:layout_marginTop="36dp"
        android:minWidth="400dp"
        android:onClick="login"
        android:text="@string/login" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/user_id_field"
        android:layout_alignParentTop="true"
        android:layout_marginTop="59dp"
        android:minWidth="400dp"
        android:text="Login"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="50sp"
        android:textStyle="bold" />

</RelativeLayout>
